--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,4 @@
+*.md  @yelari1205
 
+/githubmappping/githubmappping/ViewController.swift @yelari1205
+/githubmappping/githubmappping/DetailViewController.swift @yelari1903
